[project]
name = "workspace-monorepo"
version = "1.0.0"
description = "Combined integration test: Workspace monorepo with internal dependencies"
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[tool.uv.sources]
workspace-core = { workspace = true }
workspace-api = { workspace = true }
workspace-cli = { workspace = true }
